--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-remote_theme: pages-themes/dinky@v0.2.0
-plugins:
-- jekyll-remote-dinky # add this line to the plugins list if you already have one
-
-gem "github-pages", group: :dinky_plugins
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-dinky
